24.06.2020
Add tests.